kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mapub-ingress
  namespace: mapub

spec:
  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend

            port:
              number: 3002

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend

            port:
              number: 3001
